--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <div>
-  <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+  <div class="grid grid-cols-2 content-end bg-red-400">
+
+      <h1 class="font-bold text-8xl font-monoton">MailMan</h1>
+      <%= image_tag("mail.png", class:"w-6 h-6 rounded-full ml-8") %>
+      
+  </div>
+    <p class="font-bold text-xl font-righteous">Because you're smarter than this</p>
 </div>
