--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@300&family=Righteous&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+    <svg id="eq5PbQkotgl1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 150" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" class="-z-10 absolute top-0 -left-40">
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 75 79.431514)" fill="none" stroke="#1e3a8a" stroke-width="2"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 85.281182 79.431514)" fill="none" stroke="#fde047" stroke-width="2"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 100.194744 79.431514)" fill="none" stroke="#fbbf24" stroke-width="3"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 65.424248 79.431514)" fill="none" stroke="#38bdf8" stroke-width="2"/>
+    </svg>
+    <%= yield %>
   </body>
 </html>
