--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="flex flex-col justify-end"> 
+  <div class="buck-titlebox">
+    <h2 class="buck-title">Sign Up</h2>
   </div>
+ 
+   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+     <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="flex flex-col md:items-end items-center">
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, placeholder: "e-mail", class:"rounded-lg font-righteous text-lg md:mr-20 mt-8 mb-8" %>
+        </div>
+        <div class="field">
+          
+          <%= f.password_field :password, placeholder: "new-password", class:"rounded-lg font-righteous text-lg md:mr-20" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+        <div class="field">
+          <%= f.password_field :password_confirmation, placeholder: "repeat-password", class:"rounded-lg font-righteous text-lg md:mr-20 mt-3" %><br />
+          <% if @minimum_password_length %>
+            <em class="font-righteous md:ml-8 ml-20 text-zinc-700">( <%= @minimum_password_length %> characters minimum )</em>
+          <% end %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Sign up", class:"btn-primary md:mr-20" %>
+        </div>
+      </div>
+    <% end %>
+  <div class="flex flex-col md:items-end items-center md:pr-20">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
