--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,20 @@
     <%= javascript_importmap_tags %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@300&family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@300;400;500;600;700&family=Righteous&display=swap" rel="stylesheet">
   </head>
 
   <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <svg id="eq5PbQkotgl1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 150" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" class="-z-10 absolute top-0 -left-40">
-      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 75 79.431514)" fill="none" stroke="#1e3a8a" stroke-width="2"/>
-      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 85.281182 79.431514)" fill="none" stroke="#fde047" stroke-width="2"/>
-      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 100.194744 79.431514)" fill="none" stroke="#fbbf24" stroke-width="3"/>
-      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(3 0 0 3 65.424248 79.431514)" fill="none" stroke="#38bdf8" stroke-width="2"/>
+    <svg id="eSdVfh28yc61" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 200" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" class="-z-10 absolute top-0 -left-40"><g transform="translate(10.667134 5.154904)">
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 66.48607 94.845096)" fill="none" stroke="#1e3a8a" stroke-width="1.4"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 76.740519 94.845096)" fill="none" stroke="#fde047" stroke-width="1.4"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 86.720993 94.845096)" fill="none" stroke="#fbbf24" stroke-width="1.3"/>
+      <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 56.482453 94.845096)" fill="none" stroke="#38bdf8" stroke-width="1.3"/></g>
     </svg>
+
+
     <%= yield %>
   </body>
 </html>
