--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="overflow-hidden">
   <head>
     <title>Mailman</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -14,9 +14,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Raleway:wght@300;400;500;600;700&family=Righteous&display=swap" rel="stylesheet">
   </head>
 
-  <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <% if notice %>
+    <div class="flex flex-row left-10 bottom-10">
+      <%= render 'layouts/alerts' %>
+    </div>
+  <% end %>
+  <% if user_signed_in? %>
+    <%= render 'layouts/nav' %>
+  <% end %>
+  <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300 overflow-hidden">
+    
     <svg id="eSdVfh28yc61" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 200" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" class="-z-10 absolute top-0 -left-40"><g transform="translate(10.667134 5.154904)">
       <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 66.48607 94.845096)" fill="none" stroke="#1e3a8a" stroke-width="1.4"/>
       <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 76.740519 94.845096)" fill="none" stroke="#fde047" stroke-width="1.4"/>
