--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,62 +5,53 @@
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 m-4 bg-gradient-to-r from-yellow-300 via-amber-400 to-orange-500 rounded-full font-raleway font-bold text-zinc-700;
+    @apply py-2 px-4 m-4 bg-gradient-to-t from-yellow-300 via-amber-400 to-orange-500 rounded-full font-raleway font-bold text-zinc-700;
   }
 
   .btn-secondary {
-    @apply py-2 px-4 m-4 bg-gradient-to-r from-cyan-300 via-teal-400 to-emerald-500 rounded-full font-raleway font-bold text-zinc-700;
+    @apply py-2 px-4 m-4 bg-gradient-to-t from-cyan-300 via-teal-400 to-emerald-500 rounded-full font-raleway font-bold text-zinc-700;
   }
 
   .buck-title {
-    @apply font-bold md:text-8xl sm:text-6xl text-5xl font-monoton sm:ml-0 ml-28 transition-all ease-in;
+    @apply font-bold sm:text-8xl text-6xl font-monoton sm:ml-0 ml-28 transition-all ease-in;
   }
 
   .buck-titlebox {
     @apply flex flex-row mt-10 mr-10 sm:justify-end justify-center items-end transition-all ease-in;
   }
-}
 
+  .btn-group {
+    @apply flex py-4 px-8;
+  }
 
-.btn-group {
-  display: flex;
-  padding: 1rem 2rem;
+  .group-button {
+    @apply no-underline m-0 py-4 px-8 bg-gradient-to-t from-cyan-500 to-sky-600 font-raleway font-bold text-zinc-700;
+  }
 
-}
-.group-button {
-  background-color: white;
-  color: black;
+  .btn-group .group-button:first-child {
+    @apply rounded-tl-[3.2rem] rounded-bl-[.8rem] rounded-r-none;
+  }
 
-  text-decoration: none;
-  margin: 0;
-  padding: 1rem 2rem;
-}
+  .btn-group .group-button:not(:last-child) {
+    @apply border-l border-l-indigo-800 border-r-0 border-l-0;
+  }
 
+  .btn-group .group-button:not(:first-child) {
+    @apply border-l border-l-indigo-800;
+  }
 
-.btn-group .group-button:first-child {
-  border-radius: 3.2rem 0 0 .8rem;
-}
+  .btn-group .group-button:last-child {
+    @apply rounded-l-none rounded-tr-[.8rem] rounded-br-[3.2rem];
+  }
 
-.btn-group .group-button:not(:last-child) {
-  border-right: none;
-}
+  .group-button:hover {
+    @apply bg-black text-white;
+  }
 
-.btn-group .group-button:not(:first-child) {
-  border-left: 1px solid colors.$border;
-}
+  .group-button:active {
+    @apply bg-white text-black;
+  }
 
-.btn-group .group-button:last-child {
-  border-radius: 0 .8rem 3.2rem 0;
-}
-
-.group-button:hover {
-  background-color: black;
-  color: white;
-}
-
-.group-button:active {
-  background-color: white;
-  color: black;
 }
 
 .btn-group:after {
