--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
     </div>
   <% end %>
   <% if user_signed_in? %>
-    <%= render 'layouts/nav' %>
+    <div class="ml-5 mt-5">
+      <%= render 'layouts/nav' %>
+    </div>
   <% end %>
   <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300 overflow-hidden">
     
