--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <%= render 'layouts/nav' %>
     </div>
   <% end %>
-  <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300 overflow-hidden">
+  <body class="bg-fixed bg-auto bg-gradient-to-br from-blue-700 via-sky-500 to-cyan-300">
     
     <svg id="eSdVfh28yc61" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 200" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" class="-z-10 absolute top-0 -left-40"><g transform="translate(10.667134 5.154904)">
       <line x1="-16.698113" y1="-29.433962" x2="16.698113" y2="29.433963" transform="matrix(4.387291 0 0 4.581727 66.48607 94.845096)" fill="none" stroke="#1e3a8a" stroke-width="1.4"/>
