--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,18 +1,18 @@
-<nav data-controller="navbar">
-  <div class="nav-left">
-    <%= link_to image_tag('mail.png', class:"w-12 h-12 rounded-full bg-yellow-400"), root_path %>
-    <div class="nav-dropdown">
-      <button class="nav-drop-btn" data-action="navbar#showDrop">Courses & Cards</button>
-      <div class="nav-drop-content hidden" data-navbar-target="maindrop">
-        <%= link_to "Leads", leads_path, class:"nav-link" %>
-        <%= link_to "Add a Lead", new_lead_path, class:"nav-link" %>
-        <%= link_to "Import a List", root_path, class:"nav-link" %>
-        <button class="nav-drop-btn" data-action="navbar#hideDrop">Close</button>
+<nav data-controller="navbar" class="sticky h-12 w-screen flex items-center justify-between gap-8 pr-8 bg-blue-700 text-yellow-400 rounded-l-full">
+  <div class="flex justify-start items-center">
+    <%= link_to image_tag('mail.png', class:"min-w-[3rem] w-12 h-12 rounded-full bg-yellow-400"), root_path %>
+    <div class="overflow-hidden float-left px-2.5 py-5">
+      <button class="flex font-righteous text-bold text-xl no-underline text-yellow-300 hover:text-white my-2 ml-2" data-action="navbar#showDrop">Leads</button>
+      <div class="bg-blue-700 z-20 shadow-small min-w-[180px] hidden absolute rounded-b-xl" data-navbar-target="maindrop">
+        <%= link_to "My Leads", leads_path, class:"flex font-righteous text-bold text-lg no-underline text-yellow-300 hover:text-white ml-2 my-2" %>
+        <%= link_to "Add a Lead", new_lead_path, class:"flex font-righteous text-bold text-lg no-underline text-yellow-300 hover:text-white ml-2 my-2" %>
+        <%= link_to "Import a List", root_path, class:"flex font-righteous text-bold text-lg no-underline text-yellow-300 hover:text-white ml-2 my-2" %><br />
+        <button class="flex font-monoton text-4xl no-underline text-black hover:text-white absolute right-3 bottom-2" data-action="navbar#hideDrop">x</button>
       </div>
     </div>
   </div>
-  <div class="nav-right">
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link-info" %>
-    <%= link_to "About", home_about_path, class:"nav-link"%>
+  <div class="flex justify-end items-center">
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"font-righteous text-bold text-xl no-underline text-amber-400 px-2.5 py-5 hover:text-white" %>
+    <%= link_to "About", home_about_path, class:"font-righteous text-bold text-lg no-underline text-slate-50 px-2.5 py-5 hover:text-yellow-300"%>
   </div>
 </nav>
