--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,11 +5,11 @@
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 m-4 bg-gradient-to-t from-yellow-300 via-amber-400 to-orange-500 rounded-full font-raleway font-bold text-zinc-700;
+    @apply py-2 px-4 m-4 min-w-fit bg-gradient-to-t from-yellow-300 via-amber-400 to-orange-500 rounded-full font-raleway font-bold text-gray-700 shadow-[inset_0_-2px_4px_rgba(255,255,255,0.5)];
   }
 
   .btn-secondary {
-    @apply py-2 px-4 m-4 bg-gradient-to-t from-cyan-300 via-teal-400 to-emerald-500 rounded-full font-raleway font-bold text-zinc-700;
+    @apply py-2 px-4 m-4 min-w-fit bg-gradient-to-t from-cyan-300 via-sky-400 to-blue-500 rounded-full font-raleway font-bold text-gray-700 shadow-[inset_0_-2px_4px_rgba(220,220,255,0.2)];
   }
 
   .buck-title {
