--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,3 +1,9 @@
-<div class="buck-title-container">
-  <h1 class="buck-title">Profile</h1>
+<div class="flex flex-col-reverse justify-center md:grid align-center md:grid-cols-3 md:gap-2">
+  <div class="col-start-2 flex justify-end items-end">
+
+      <%= link_to "Edit Profile", edit_user_registration_path, class:"btn-primary" %>
+  </div>
+  <div class="col-start-3 flex flex-row sm:justify-end justify-center items-end transition-all ease-in mt-10 mr-10">
+    <h1 class="font-bold sm:text-8xl text-6xl font-monoton sm:ml-0 ml-28 transition-all ease-in text-right">Post<br \>Office</h1>
+  </div>
 </div>
