--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,3 @@
-<h1 class="buck-title">About</h1>
+<div class="flex flex-row mt-10 mr-10 sm:justify-end justify-center items-end transition-all ease-in">
+  <h1 class="font-bold sm:text-8xl text-6xl font-monoton sm:ml-0 ml-28 transition-all ease-in text-right">About</h1>
+</div>
