--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="overflow-hidden">
+<html class="overflow-auto">
   <head>
     <title>Mailman</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
