--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="flex flex-col justify-end"> 
-  <div class="buck-titlebox">
-    <h2 class="buck-title">Sign Up</h2>
+  <div class="flex flex-row mt-10 mr-10 sm:justify-end justify-center items-end transition-all ease-in">
+    <h2 class="font-bold sm:text-8xl text-6xl font-monoton sm:ml-0 ml-28 transition-all ease-in">Sign Up</h2>
   </div>
  
    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
      <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="flex flex-col md:items-end items-center">
+      <div class="flex flex-col items-center md:items-end items-center">
         <div class="field">
           <%= f.email_field :email, autofocus: true, placeholder: "e-mail", class:"rounded-lg font-righteous text-lg md:mr-20 mt-8 mb-8" %>
         </div>
@@ -15,7 +15,7 @@
         <div class="field">
           <%= f.password_field :password_confirmation, placeholder: "repeat-password", class:"rounded-lg font-righteous text-lg md:mr-20 mt-3" %><br />
           <% if @minimum_password_length %>
-            <em class="font-righteous md:ml-8 text-zinc-700">( <%= @minimum_password_length %> characters minimum )</em>
+            <em class="font-righteous md:ml-8 ml-4 text-slate-50 lg:text-zinc-700 text-shadow lg:text-shadow-none text-xl">( <%= @minimum_password_length %> characters minimum )</em>
           <% end %>
         </div>
         <div class="actions">
